--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     </section>
     <!-- ------------adoption----------- -->
     <section>
-      <div class="container custom_container">
+      <div class="container custom_container mt-lg-5 mt-0 pt-lg-5 pt-">
         <div class="row align-items-center justify-content-lg-between justify-content-center">
           <div class="col-12 col-lg-5" data-aos="fade-right">
             <h4 class="ff_inter fw-bold fs_2lg text-white"><span class="fw-light fs_4lg bottom_line">Driving </span>Web3
@@ -487,8 +487,10 @@
                 <div class="link-btn d-flex justify-content-center align-items-center">
                   <div class="d-flex justify-content-center align-items-center ">
                     <svg width="20" height="13" viewBox="0 0 20 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M14.5711 1.01284L14.0549 0.473213L12.9757 1.55246L17.2457 5.79906H0.282776V7.30062H17.2457L12.9757 11.5472L14.0549 12.6265L19.5919 7.08946C19.7327 6.93305 19.8031 6.75318 19.8031 6.54984C19.8031 6.3465 19.7327 6.16663 19.5919 6.01022L14.5711 1.01284Z" fill="#00CCAB"/>
-                      </svg>                   
+                      <path
+                        d="M14.5711 1.01284L14.0549 0.473213L12.9757 1.55246L17.2457 5.79906H0.282776V7.30062H17.2457L12.9757 11.5472L14.0549 12.6265L19.5919 7.08946C19.7327 6.93305 19.8031 6.75318 19.8031 6.54984C19.8031 6.3465 19.7327 6.16663 19.5919 6.01022L14.5711 1.01284Z"
+                        fill="#00CCAB" />
+                    </svg>
                     <a href="#" class="text-decoration-none mx-3 ff_inter fw-medium fs_6sm green_color">Go to</a>
                   </div>
                 </div>
